[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.2.0"]

[tool.poetry]
name = "autosubliminal"
version = "0.0.0"
description = "Auto-Subliminal, the automated subliminal subtitle downloader"
license = "GPL-3.0"
authors = ["h3llrais3r <pooh_beer_1@hotmail.com>"]
maintainers = ["h3llrais3r <pooh_beer_1@hotmail.com>"]
readme = "README.md"
homepage = "https://h3llrais3r.github.io/Auto-Subliminal"
repository = "https://github.com/h3llrais3r/Auto-Subliminal"
keywords = ["subtitle", "subtitles", "video", "movie", "tv", "show", "episode"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Video",
]
packages = [{ include = "autosubliminal" }, { include = "AutoSubliminal.py" }]

[tool.poetry.dependencies]
# Python version
python = ">=3.7,<4"

# Runtime dependencies
babelfish = "0.6.0"
CherryPy = "18.8.0"
deathbycaptcha = "0.1.1"
"dogpile.cache" = "1.1.8"
enzyme = "0.4.1"
ffsubsync = "0.4.22"
GitPython = "3.1.30"
gntp = "1.0.3"
guessit = "3.5.0"
html5lib = "1.1"
imdbpie = { git = "https://github.com/h3llrais3r/imdb-pie.git", rev = "75c300af1bf87c49baef09f17002a3e35b0ed3cc" }
importlib-metadata = { version = "4.2.0", markers = "python_version < '3.8'" }
jsonpickle = "3.0.1"
langdetect = "1.0.9"
packaging = "21.3"
pysrt = "1.1.2"
python-anticaptcha = "1.0.0"
python-dateutil = "2.8.2"
python-twitter = "3.5"
rebulk = "3.1.0"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
schema = "0.7.5"
simplejson = "3.18.0"
subliminal = { git = "https://github.com/Diaoul/subliminal.git", rev = "6ac2fa23ee5baa7d8452552edaa7c4a8a00d237a" }
tailer = "0.4.1"
tvdb_api = { git = "https://github.com/h3llrais3r/tvdb_api.git", rev = "1210df9dd5869ccc5b63149b1b80630310a14f40" }
Unidecode = "1.3.6"
ws4py = "0.5.1"

[tool.poetry.group.dev.dependencies]
# Testing
coverage = "6.5.0"
coveralls = "3.3.1"
pytest = "7.2.0"
pytest-mock = "3.10.0"
requests-mock = "1.10.0"
vcrpy = "4.2.1"

# Tooling
autopep8 = "2.0.0"
flake8 = "5.0.4"
isort = "5.11.4"
pigar = "2.0.4"

[tool.flake8]
