[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.2.0"]

[tool.poetry]
name = "autosubliminal"
version = "0.0.0"
description = "Auto-Subliminal, the automated subliminal subtitle downloader"
license = "GPL-3.0"
authors = ["h3llrais3r <h3llrais3r.github@gmail.com>"]
maintainers = ["h3llrais3r <h3llrais3r.github@gmail.com>"]
readme = "README.md"
homepage = "https://h3llrais3r.github.io/Auto-Subliminal"
repository = "https://github.com/h3llrais3r/Auto-Subliminal"
keywords = ["subtitle", "subtitles", "video", "movie", "tv", "show", "episode"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Video",
]
packages = [{ include = "autosubliminal" }, { include = "AutoSubliminal.py" }]

[tool.poetry.dependencies]
# Python version
python = ">=3.8.1,<4"

# Runtime dependencies
babelfish = "0.6.0"
CherryPy = "18.8.0"
deathbycaptcha = "0.1.1"
"dogpile.cache" = "1.2.2"
enzyme = "0.4.1"
ffsubsync = "0.4.25"
GitPython = "3.1.34"
gntp = "1.0.3"
guessit = "3.7.1"
html5lib = "1.1"
imdbpie = { git = "https://github.com/h3llrais3r/imdb-pie.git", rev = "4e5fc35fdafbf8b1d51b54dd722f757f99f98d46" }
jsonpickle = "3.0.2"
langdetect = "1.0.9"
packaging = "23.1"
pysrt = "1.1.2"
python-anticaptcha = "1.0.0"
python-dateutil = "2.8.2"
python-twitter = "3.5"
rebulk = "3.2.0"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
schema = "0.7.5"
simplejson = "3.19.1"
subliminal = { git = "https://github.com/Diaoul/subliminal.git", rev = "6ac2fa23ee5baa7d8452552edaa7c4a8a00d237a" }
tailer = "0.4.1"
tvdb_api = { git = "https://github.com/h3llrais3r/tvdb_api.git", rev = "1210df9dd5869ccc5b63149b1b80630310a14f40" }
Unidecode = "1.3.6"
ws4py = "0.5.1"

[tool.poetry.group.dev.dependencies]
# Testing
coverage = "7.3.1"
pytest = "7.4.1"
pytest-mock = "3.11.1"
requests-mock = "1.11.0"
vcrpy = "5.1.0"

# Tooling
autopep8 = "2.0.4"
flake8 = "6.1.0"
isort = "5.12.0"
mypy = "1.5.1"
pigar = "2.1.1"
types-requests = "2.31.0.2"
types-setuptools = "68.1.0.1"
types-python-dateutil = "2.8.19.14"

[tool.coverage.run]
branch = false
source = ["autosubliminal"]
omit = [
  "autosubliminal/core/enums.py",
  "autosubliminal/providers/addic7ed.py",
  "autosubliminal/providers/useragents.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@abstractmethod",
  "class CustomRotatingFileHandler",
]

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]

[tool.autopep8]
max_line_length = 120
experimental = true
ignore = ["E402"]

[tool.flake8]

[tool.isort]
line_length = 120
extra_standard_library = ["pkg_resources"]
known_first_party = ["autosubliminal"]
known_tests = ["tests"]
default_section = "THIRDPARTY"
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
  "TESTS",
]

[tool.mypy]
files = ["AutoSubliminal.py", "autosubliminal", "tests"]
exclude = [
  "autosubliminal/parsers/guessit/rules.py",
  "autosubliminal/providers/addic7ed_custom.py",
  "autosubliminal/providers/pitcher.py",
]
ignore_missing_imports = true
no_strict_optional = true
#no_implicit_optional = true # use this instead of no_strict_optional for strict optional check
check_untyped_defs = true
disallow_untyped_defs = true
#disallow_any_unimported = true # use this for checking return types of imported libs
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
